--- a/src/icHomeword_assets/src/index.html
+++ b/src/icHomeword_assets/src/index.html
@@ -3,20 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>icHomeword</title>
+    <title>hello IC</title>
     <base href="/" />
     <link rel="icon" href="favicon.ico" />
-    <link type="text/css" rel="stylesheet" href="main.css" />
+    <!-- <link type="text/css" rel="stylesheet" href="main.css" /> -->
   </head>
   <body>
     <main>
-      <img src="logo.png" alt="DFINITY logo" />
-      <form action="#">
-        <label for="name">Enter your name: &nbsp;</label>
-        <input id="name" alt="Name" type="text" />
-        <button type="submit">Click Me!</button>
-      </form>
-      <section id="greeting"></section>
+      <h1>这是IC上的一个简易网站</h1>
     </main>
   </body>
 </html>
