--- a/src/icHomeword_assets/src/index.html
+++ b/src/icHomeword_assets/src/index.html
@@ -3,14 +3,64 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>hello IC</title>
+    <title>Microblog</title>
     <base href="/" />
-    <link rel="icon" href="favicon.ico" />
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@2.8.0/dist/full.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
     <!-- <link type="text/css" rel="stylesheet" href="main.css" /> -->
   </head>
   <body>
-    <main>
-      <h1>这是IC上的一个简易网站</h1>
+    <main class="container mx-auto">
+      <header>
+        <h1 class="flex flex-col justify-center items-center w-full text-center text-9xl ">Microblog<small class="relative"><p class="text-5xl mt-5" id="author" ></p><label for="my-modal" class="absolute w-28 btn modal-button -right-32 top-7">set name</label></small></h1>
+      </header>
+      <section>
+          <div class="flex justify-between text-xl">
+            <div class="flex space-x-5 items-center">
+              <!-- <div>author: </div> -->
+              <!-- <p class="" id="author" ></p> -->
+              <div class="form-control">
+                <div class="input-group">
+                  <input type="text" placeholder="input principalId" class="input input-bordered" id="pid">
+                  <button class="btn" id="addFollow">
+                    follow
+                    <!-- <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" /></svg> -->
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        <form action="#">
+          <textarea id="message" class="mt-10 textarea w-full textarea-primary text-xl" rows="5" placeholder="input your content..."></textarea>
+          <div class="flex justify-end w-full">
+            <button id="post" class="btn btn-primary mt-10">POST</button>
+          </div>
+        </form>
+        <div class="tabs" id="tabs">
+          <a class="tab tab-bordered text-xl" id="myBlog">my blog</a> 
+          <a class="tab tab-bordered text-xl" id="timeLine">timeline</a> 
+          <a class="tab tab-bordered text-xl" id="followed">followed</a>
+        </div>
+        <section id="section" class="card w-full bg-base-100 shadow-md">
+            <div class="card-body">
+              <h2 class="card-title"> </h2>
+              <p class="flex justify-between">  <span> </span></p>
+            </div>
+        </section>
+      </section>
     </main>
+
+<!-- Put this part before </body> tag -->
+<!-- The button to open modal -->
+  <input type="checkbox" id="my-modal" class="modal-toggle">
+  <div class="modal">
+    <div class="modal-box">
+      <h3 class="font-bold text-lg">input your name!</h3>
+      <input type="text" id="authorName" placeholder="Type here" class="mt-10 input input-bordered input-primary w-full max-w-xs">
+      <div class="modal-action">
+        <label for="my-modal" id="ok" class="btn">Ok</label>
+      </div>
+    </div>
+  </div>
   </body>
 </html>
